sustituyendo el tipo de fuente en los botones de acuerdos

--- a/css/styles.css
+++ b/css/styles.css
@@ -348,7 +348,7 @@ body {
     text-decoration: none;
     letter-spacing: 0.06rem;
 
-    color: #121;
+    color: #1624f7;
     border-bottom: 3px solid #121;
 }
 
