--- a/css/styles.css
+++ b/css/styles.css
@@ -321,7 +321,7 @@ body {
 .nav-grid {
   display: grid;
 
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 10% 1fr 10%;
   grid-template-rows: auto;
   justify-items: center;
   align-items: center;
@@ -1066,6 +1066,9 @@ http://www.tipue.com/search
     }
     .w-a--l {
       width: auto;
+    }
+    .maw-70p--l {
+        max-width: 60%;
     }
 
 
