--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -22,7 +22,7 @@ body {
 
 .nav-grid {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 10% 1fr 10%;
   grid-template-rows: auto;
   justify-items: center;
   align-items: center;
