--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -20,6 +20,11 @@ body {
   cursor: pointer;
 }
 
+/*STRIPE RULES*/
+.button-shw {
+    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+}
+
 .nav-grid {
   display: grid;
   grid-template-columns: 10% 1fr 10%;
