--- a/src/css/_position.css
+++ b/src/css/_position.css
@@ -1,89 +1,124 @@
 .pos-r {
-  position: relative;
+    position: relative;
 }
 
+
 /* stylelint-disable */
+
 .pos-sy {
-  position: sticky;
-  position: -webkit-sticky;
+    /*Para aquellos que no soportan sticky*/
+    position: fixed;
+
+    /*Aquellos que soportan sticky sobreescriben el fixed*/
+    position: sticky;
+    position: -webkit-sticky;
 }
+
+
 /* stylelint-enable */
 
 .pos-a {
-  position: absolute;
+    position: absolute;
 }
 
 .pos-f {
-  position: fixed;
+    position: fixed;
 }
 
 .pos-s {
-  position: static;
+    position: static;
 }
 
 .tp-0 {
-  top: 0;
+    top: 0;
 }
+
 .tp-2- {
-  top: -2px;
+    top: -2px;
 }
 
 .tp-5p {
-  top: 5px;
+    top: 5px;
 }
 
 .tp-1 {
-  top: 10%;
+    top: 10%;
 }
 
 .tp-2 {
-  top: 20%;
+    top: 20%;
 }
 
 .tp-3 {
-  top: 30%;
+    top: 30%;
 }
 
 .tp-4 {
-  top: 40%;
+    top: 40%;
 }
 
 .tp-5 {
-  top: 50%;
+    top: 50%;
 }
 
 .tp-6 {
-  top: 60%;
+    top: 60%;
 }
 
 .tp-7 {
-  top: 70%;
+    top: 70%;
 }
 
 .tp-8 {
-  top: 80%;
+    top: 80%;
 }
 
 .tp-9 {
-  top: 90%;
+    top: 90%;
 }
 
 .tp-10 {
-  top: 100%;
+    top: 100%;
 }
 
 .rt-0 {
-  right: 0;
+    right: 0;
 }
 
 .lf-0 {
-  left: 0;
+    left: 0;
 }
 
 .lf-5 {
-  left: 5px;
+    left: 5px;
+}
+
+.bt-0 {
+    bottom: 0;
+}
+
+.tp-90vh {
+    top: 92vh;
 }
 
 
+@media only screen and (min-width: 30em) {
 
+    .tp-5--s {
+        top: 50%;
+    }
+}
 
+@media only screen and (min-width: 48em) {
+
+    .tp-5--m {
+        top: 50%;
+    }
+}
+
+@media only screen and (min-width: 64em) {
+
+    .tp-5--l {
+        top: 50%;
+    }
+}
