--- a/src/css/_color.css
+++ b/src/css/_color.css
@@ -46,7 +46,7 @@
   color: var(--luckyPoint);
 }
 
-.transparent {
+.bgc-transparent {
   background-color: transparent;
 }
 
@@ -144,4 +144,27 @@
 
 .bgc-cha {
   background-color: var(--chunta);
+}
+
+@media only screen and (min-width: 30em) {
+
+    .bgc-transparent--s {
+        background-color: transparent;
+    }
+}
+
+@media only screen and (min-width: 48em) {
+
+    .bgc-transparent--m {
+        background-color: transparent;
+    }
+
+}
+
+@media only screen and (min-width: 64em) {
+
+    .bgc-transparent--l {
+        background-color: transparent;
+    }
+
 }
