--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -515,4 +515,102 @@ http://www.tipue.com/search
   }
 }
 
+.tabla-calendario {
+    display: none;
+    padding: 20px 0;
+    border: 1px solid var(--impureGrey);
+    text-align: center;
+}
+
+.tabla-grid {
+    display: inline-grid;
+    grid-template-columns: repeat(3, 33.33%);
+    border: 1px solid #000;
+    width: 90%;
+    background-color: #fff;
+}
+
+.input-record {
+    display: none;
+}
+
+.label-record {
+    display: inline-block;
+    margin: 0 0 -1px;
+    padding: 2px;
+    font-weight: 600;
+    font-size: 14px;
+    text-align: center;
+    color: var(--impureGrey);
+    border: 1px solid var(--impureGrey);
+    width: 20%;
+    &:hover {
+        color: var(--impureBlack);
+        cursor: pointer;
+    }
+    &:nth-of-type(4n+1) {
+        margin-left: 10px;
+    }
+}
+
+.label-responsive {
+    display: none;
+}
+
+.input-record:checked + .label-record {
+    color: var(--impureBlack);
+    border: 1px solid var(--impureGrey);
+    border-top: 5px solid var(--gradient2);
+    border-bottom: 1px solid var(--impureWhite);
+    background-color: var(--impureWhite);
+}
+
+#tab1:checked ~ .contenido1,
+#tab2:checked ~ .contenido2,
+#tab3:checked ~ .contenido3 {
+    display: block;
+    background-color: var(--impureWhite);
+}
+
+.grid-text {
+    display: block;
+    padding: 10px 0;
+    &:not(:last-child) {
+        border-bottom: 1px solid #ccc;
+    }
+}
+
+.grid-title {
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    margin: 0;
+}
+
+.grid-title-min {
+    background-color: var(--btnMinBgc);
+}
+
+.grid-title-max {
+    background-color: var(--gradient2);
+}
+
+.tabla-record-header {
+    width: 100%;
+    display: inline-block;
+    font-size: 0;
+}
+
+.tabla-record-header-text {
+    display: inline-block;
+    font-size: 30px;
+    margin-bottom: 10px;
+    width: 90%;
+    text-align: left;
+}
+
+.tabla-record-minimas-desktop {
+    display: none;
+}
+
 /* stylelint-enable */
+
